--- a/src/components/main.css
+++ b/src/components/main.css
@@ -29,10 +29,10 @@ body {
   background-color: rgb(255, 250, 250);
   /* background-image: url(../Assets/nav/Rectangle.png); */
   /* background-image: url(../Assets//esction1/b-haj.jpg); */
-  background-image: url(../Assets/esction1/Layer\ 1.png);
+  /* background-image: url(../Assets/esction1/Layer\ 1.png); */
 
   /* background-position:center; */
-  background-size:calc(600px);
+  background-size: calc(600px);
   padding: 0 1%;
 }
 
@@ -79,71 +79,68 @@ select {
   justify-content: center;
   flex-direction: column;
   padding: 5% 0;
-
 }
-.section_center{
-    width: 100%;
-    height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-     background-image: url(../Assets//esction1//b-haj.jpg);
+.section_center {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  background-image: url(../Assets//esction1//b-haj.jpg);
   background-size: cover;
 }
 
-.sec_1_right{
+.sec_1_right {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 10px;
   padding: 4% 0;
- 
+
   /* flex-direction: column; */
 }
 
-.hodim{
+.hodim {
   display: flex;
   align-items: center;
   gap: 5px;
   font-size: 20px;
-  
-    color: rgb(3, 3, 3);
+
+  color: rgb(3, 3, 3);
 
   font-weight: bold;
   padding: 5%;
 }
 
-
-
-#biz{
-    text-align: center;
-    margin: 10px;
-    font-size: 30px;
-    font-weight: 600;
-    color: #509F40FF;
-    text-shadow: 4px 4px 1px rgb(255, 255, 255);
+#biz {
+  text-align: center;
+  margin: 10px;
+  font-size: 30px;
+  font-weight: 600;
+  color: #509f40ff;
+  text-shadow: 4px 4px 1px rgb(255, 255, 255);
 }
-
 
 /* ******section2****** */
 
-#section2{
+#section2 {
   width: 100%;
   height: auto;
-
 }
-#section2>p,#section3 >p{
+#section2 > p,
+#section3 > p,
+#section4 > p {
   text-align: center;
-      margin: 10px;
-    font-size: 30px;
-    font-weight: 600;
-    color: #509F40FF;
-    text-shadow: 4px 4px 1px rgb(255, 255, 255);
-    margin: 5% 0;
+  margin: 10px;
+  font-size: 30px;
+  font-weight: 600;
+  color: #509f40ff;
+  text-shadow: 4px 4px 1px rgb(255, 255, 255);
+  margin: 5% 0;
 }
-#foydali{
+#foydali {
   width: 100%;
   height: auto;
   display: flex;
@@ -151,79 +148,271 @@ select {
   justify-content: space-between;
   padding: 2% 3%;
 }
-.f_cart{
+.f_cart {
   width: 380px;
-height: 307px;
-display: flex;
-flex-direction: column;
-align-items: center;
-transition: 0.5s;
-background-color: white;
-border-top-right-radius: 20px;
-border-top-left-radius: 20px;
-border-radius: 10px;
-
+  height: 307px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: 0.5s;
+  background-color: white;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  border-radius: 10px;
 }
-.f_cart:hover{
+.f_cart:hover {
   cursor: pointer;
-  
-box-shadow: 5px 5px 15px rgb(20, 19, 19);
-border-radius: 10px;
 
-
+  box-shadow: 5px 5px 15px rgb(20, 19, 19);
+  border-radius: 10px;
 }
-.f_cart > img{
+.f_cart > img {
   width: 100%;
   height: 247px;
-
-
 }
-.f_cart>p{
-margin: 10px 0;
-font-size: 28px;
+.f_cart > p {
+  margin: 10px 0;
+  font-size: 28px;
 }
 
 /* ------------------section3------------ */
 
-#section3{
+#section3 {
   width: 100%;
   height: auto;
   padding: 5% 0;
 }
-.section3_cartlat{
+.section3_cartlat {
   width: 100%;
   height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap:20px;
-
+  gap: 20px;
 }
-.sec_3_cart{
+.sec_3_cart {
   width: 350px;
-height: 400px;
+  height: 400px;
 
-
-background: #FFFFFF;
-border: 1px rgb(107, 102, 102)D3C9C9;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-transition: 0.5s;
+  background: #ffffff;
+  border: 1px rgb(107, 102, 102) D3C9C9;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: 0.5s;
 }
-.sec_3_cart:hover{
-box-shadow: 5px 5px 15px rgb(20, 19, 19);
-
+.sec_3_cart:hover {
+  box-shadow: 5px 5px 15px rgb(20, 19, 19);
 }
-.img{
+.img {
   width: 100%;
-height: 230px;
+  height: 230px;
 }
-.img> img{
+.img > img {
   width: 100%;
   height: 100%;
 }
-.text{
+.text {
   padding: 1%;
   text-align: center;
   font-size: 18px;
+}
+
+/* ***********section4 ******** */
+
+#section4 {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
+.lavhalar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 1% 0;
+}
+
+.lavhalar > img {
+  width: 400px;
+  height: 220px;
+  margin: 2px;
+}
+
+footer {
+  width: 100%;
+  padding-top: 10%;
+  /* position: fixed; */
+}
+
+@media (max-height: 800px) {
+  footer {
+    position: static;
+  }
+  header {
+    padding-top: 40px;
+  }
+}
+
+.footer-distributed {
+  background-color: #2d2a30;
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px sans-serif;
+  padding: 50px 50px 60px 50px;
+  margin-top: 80px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+
+/* Footer left */
+
+.footer-distributed .footer-left {
+  width: 30%;
+}
+
+.footer-distributed h3 {
+  color: #ffffff;
+  font: normal 36px "Cookie", cursive;
+  margin: 0;
+}
+
+.footer-distributed h3 span {
+  color: #e0ac1c;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links {
+  color: #ffffff;
+  margin: 20px 0 12px;
+}
+
+.footer-distributed .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer-distributed .footer-company-name {
+  color: #8f9296;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+
+/* Footer Center */
+
+.footer-distributed .footer-center {
+  width: 35%;
+}
+
+.footer-distributed .footer-center i {
+  background-color: #33383b;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
+}
+
+.footer-distributed .footer-center p {
+  display: inline-block;
+  color: #ffffff;
+  vertical-align: middle;
+  margin: 0;
+}
+
+.footer-distributed .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+
+.footer-distributed .footer-center p a {
+  color: #e0ac1c;
+  text-decoration: none;
+}
+
+/* Footer Right */
+
+.footer-distributed .footer-right {
+  width: 30%;
+}
+
+.footer-distributed .footer-company-about {
+  line-height: 20px;
+  color: #92999f;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer-distributed .footer-company-about span {
+  display: block;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.footer-distributed .footer-icons {
+  margin-top: 25px;
+}
+
+.footer-distributed .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #33383b;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 3px;
+  margin-bottom: 5px;
+}
+
+.footer-distributed .footer-icons a:hover {
+  background-color: #3f71ea;
+}
+
+.footer-links a:hover {
+  color: #3f71ea;
+}
+
+@media (max-width: 880px) {
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-center,
+  .footer-distributed .footer-right {
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  .footer-distributed .footer-center i {
+    margin-left: 0;
+  }
 }
