--- a/src/components/main.css
+++ b/src/components/main.css
@@ -12,6 +12,13 @@ button {
   cursor: pointer;
   border: none;
 }
+html {
+  scroll-behavior: smooth;
+}
+.block{
+  display: none;
+}
+
 #root {
   max-width: 1440px;
   height: 100vh;
@@ -29,8 +36,7 @@ body {
   background-size: calc(600px);
   padding: 0 1%;
   background-image: url(../Assets/esction1/bg.png);
-   background-size: calc(400px);
-
+  background-size: calc(400px);
 }
 
 /*  ******* nav****** */
@@ -46,18 +52,18 @@ nav {
 }
 
 .links > button {
-  width: 151px;
-  height: 38px;
-  background: none;
+  /* width: 151px;
+  height: 38px; */
   border-radius: 10px;
   margin: 0 45px;
-  color: rgb(92, 158, 79);
-  border: 1px solid rgb(92, 158, 79);
   transition: 0.5s;
+  color: white;
+  background: rgb(92, 158, 79);
+  padding: 6px 10px;
+  font-size: 20px;
 }
 .links > button:hover {
-  background: rgb(92, 158, 79);
-  color: white;
+  color: rgb(1, 1, 1);
 }
 
 select {
@@ -99,18 +105,25 @@ select {
   height: 200px;
   display: flex;
   align-items: center;
-  padding: 0 10%;
+  padding: 3% 10%;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+.biz_afzalik {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
 }
 .sec_1_right {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
-  padding: 4% 0;
-
+  padding: 15% 4% 0;
+  flex-direction: column;
 }
 
 .hodim {
@@ -133,6 +146,15 @@ select {
   color: #509f40ff;
   text-shadow: 4px 4px 1px rgb(255, 255, 255);
 }
+/* **********katigoria */
+
+.katigori{
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
 /* ******section2****** */
 
@@ -142,7 +164,9 @@ select {
 }
 #section2 > p,
 #section3 > p,
-#section4 > p {
+#section4 > p,
+#ichki>p,
+.sec_1_right > p {
   text-align: center;
   margin: 10px;
   font-size: 30px;
@@ -171,9 +195,9 @@ select {
   border-top-right-radius: 1px;
   border-top-left-radius: 1px;
   box-shadow: 5px 5px 15px rgba(20, 19, 19, 0.378);
-
+  background-color: white;
 }
-.malumot> button{
+.malumot > button {
   margin: 0 auto;
   background: none;
   width: 151px;
@@ -187,7 +211,6 @@ select {
 .malumot :nth-child(1) {
   font-weight: bold;
   padding-bottom: 5px;
-  
 }
 
 .f_cart {
@@ -198,20 +221,76 @@ select {
   align-items: center;
   transition: 0.5s;
   background-color: white;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-  border-radius: 10px;
-  box-shadow: 5px 5px 15px rgba(20, 19, 19, 0.378);
 
+  border-radius: 8px;
+  box-shadow: 5px 5px 15px rgba(20, 19, 19, 0.378);
+}
+.boxxx {
+  overflow: hidden;
+  width: 380px;
+  height: 307px;
+  position: relative;
+}
+
+.boxx {
+  width: 380px;
+  height: 307px;
+  transform: translateY(-307px);
+  transition: 0.9s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  position: absolute;
+  line-height: 18px;
+  background-color: white;
+}
+.boxx > button{
+   margin: 5px auto;
+  background: none;
+  width: 171px;
+  height: 38px;
+  background: none;
+  border-radius: 10px;
+  color: rgb(255, 255, 255);
+  transition: 0.5s;
+  background: rgb(92, 158, 79);
+
+}
+.f_cart:hover .boxx {
+  transform: translateY(0px);
 }
 
 .f_cart > img {
   width: 100%;
   height: 247px;
+  border-radius: 8px;
 }
 .f_cart > p {
   margin: 10px 0;
   font-size: 28px;
+}
+
+.modal {
+  position: absolute;
+  width: 380px;
+  height: 307px;
+  background-color: white;
+}
+.boxx > p {
+  font-size: 18px;
+  padding: 10px;
+}
+#close {
+  position: absolute;
+  right: 9px;
+  top: 0;
+  color: red;
+  background: none;
+  font-weight: bold;
+}
+.modal-body > span {
+  font-size: 14px;
 }
 
 /* ------------------section3------------ */
@@ -247,8 +326,9 @@ select {
   height: 230px;
 }
 .img > img {
-  width: 100%;
-  height: 100%;
+  width: 350px;
+  height: 230px;
+  object-fit: cover;
 }
 .text {
   width: 100%;
@@ -282,7 +362,8 @@ select {
 .lavhalar > img {
   width: 400px;
   height: 220px;
-  margin: 2px;
+  margin: 0.5%;
+  object-fit: cover;
 }
 
 footer {
@@ -306,9 +387,10 @@ footer {
   width: 100%;
   text-align: left;
   font: bold 16px sans-serif;
-  padding: 50px 50px 60px 50px;
+  padding: 50px;
   margin-top: 80px;
 }
+/* //namangan */
 
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
@@ -320,7 +402,8 @@ footer {
 /* Footer left */
 
 .footer-distributed .footer-left {
-  width: 30%;
+  width: 20%;
+  margin-right: 19px;
 }
 
 .footer-distributed h3 {
@@ -357,7 +440,7 @@ footer {
 /* Footer Center */
 
 .footer-distributed .footer-center {
-  width: 35%;
+  width: 24%;
 }
 
 .footer-distributed .footer-center i {
@@ -446,6 +529,28 @@ footer {
   color: #3f71ea;
 }
 
+/* center */
+p > span {
+  margin-left: 20px;
+}
+@media (max-width: 1024px) {
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-center,
+  .footer-distributed .footer-right {
+    display: block;
+    width: 80%;
+    margin-bottom: 40px;
+    text-align: center;
+    display: inline;
+  }
+  .footer-distributed .footer-center i {
+    margin-left: 0;
+  }
+
+
+}
+
+
 @media (max-width: 880px) {
   .footer-distributed .footer-left,
   .footer-distributed .footer-center,
@@ -454,8 +559,169 @@ footer {
     width: 100%;
     margin-bottom: 40px;
     text-align: center;
+    display: inline;
   }
   .footer-distributed .footer-center i {
     margin-left: 0;
   }
+}
+
+/* desctop medya */
+
+@media (max-width: 1260px) {
+  #foydali {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2% 1%;
+  }
+  .lavhalar {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 1% 0;
+  }
+}
+
+@media (max-width: 1200px) {
+  .malumot {
+    width: 350px;
+    height: 307px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    border-radius: 10px;
+    padding: 4px;
+    border-top-right-radius: 1px;
+    border-top-left-radius: 1px;
+  }
+  .f_cart {
+    width: 350px;
+    height: 307px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: 0.5s;
+    border-radius: 8px;
+  }
+  .modal {
+    position: absolute;
+    width: 350px;
+    height: 307px;
+    background-color: white;
+  }
+  #foydali {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2% 0%;
+  }
+  .boxxx {
+    overflow: hidden;
+    width: 350px;
+    height: 307px;
+    position: relative;
+     
+  }
+  .boxx {
+    width: 350px;
+    height: 307px;
+    transform: translateY(-307px);
+    transition: 0.9s;
+
+    border-radius: 10px;
+    position: absolute;
+ 
+   
+  }
+}
+
+
+@media (max-width: 1090px) {
+  #foydali {
+    width: 100%;
+    height: auto;
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2% 0%;
+    gap: 40px;
+  }
+  .sec_1_left {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  padding: 3% 4%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.sec_1_right {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15% 0;
+  flex-direction: column;
+}
+.hodim {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 20px;
+
+  color: rgb(3, 3, 3);
+
+  font-weight: bold;
+  padding: 5% 1%;
+}
+
+}
+
+@media (max-width: 1024px) {
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 0px;
+}
+
+
+}
+
+@media (max-width: 768px) {
+  nav{
+    display: none;
+  }
+  .block{
+    width: 100%;
+  display: block;
+  padding: 2% 2% 0 5%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.block > img{
+  width: 100px;
+  height: 90px;
+}
+.block > button{
+  width: 40px;
+  height: 40px;
+  color: white;
+  background: none;
+  background: rebeccapurple;
+
+}
+
 }
